Fix add-opens -- it's needed for systemlambda